# rr_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: dummy-config.cmake.in
rr_cmake/: Directory.Build.props.in  FindVcpkInstall.cmake  blpapi.cmake  common.cmake  cxx20.cmake  extract_archive.cmake  fetch_cache_archive.cmake  get_temp.cmake  git_include.cmake  visual_enable_parallel_compile.cmake  visual_source_group.cmake
